# doandanganh

./: .gitignore  README.md  package-lock.json  package.json
another-lightweight-backend/: .gitignore  README.md  app.py  requirements.txt
authentication-frontend-testing/: .firebaserc  index.html
backend/: .gitignore  README.md  requirements.txt
dashboard-service/: package-lock.json  package.json  tailwind.config.js
iot-gateway/: .gitignore  config.py  get_command.py  iot_gateway_to_mqtt_broker.py  main.py  mqtt_broker_to_iot_gateway.py  send_image.py  test.py
local-data-process-service/: README.MD  app.py  capp.py  requirements.txt
local_data_process_service/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  tasks.py
local_data_process_service/deprecated/adafruitio_client/: mqttclient.py  workers.py
local_data_process_service/deprecated/adafruitio_client/tests/: test_mqtt_subcriber_start.py
local_data_process_service/deprecated/firebase/: __init__.py  firestore_util.py
local_data_process_service/deprecated/routes/: feed_routes.py
local_data_process_service/src/local_data_process_service/: app.py  capp.py
local_data_process_service/src/local_data_process_service/connectors/: __init__.py  sink_connector.py  source_connector.py
local_data_process_service/src/local_data_process_service/core/phases/: __init__.py  phase1.py
local_data_process_service/src/local_data_process_service/utils/: __init__.py  config.py  logger.py
microservices/: docker-compose.yaml
mqtt-kafka-bridge/: CHANGELOG.md  pyproject.toml
mqtt-listener-service/: README.MD  (+3 more)
(+326 files in other folders)
